tests/fixtures/syntax/invalid/fixture_reference_dot_segment_leading_parent_path.repor
case "fixture reference path must not contain a dot segment" {
  $ true
  assert {
    file <"out.txt"> contents_equals @"../escape.txt"
  }
}
